# ross

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  DEVELOPMENT_PLAN.md  Dockerfile  Dockerfile.dev  Makefile  README.md  agent.yaml  cli-refactor-plan.md  docker-entrypoint.sh  implementation-plan.md  proto-services-plan.md  start.sh
.devcontainer/: Dockerfile  devcontainer.json
cli/: Cargo.toml
cli/src/: main.rs  utils.rs
cli/src/commands/: container.rs  health.rs  image.rs  mod.rs  run.rs
container/: Cargo.toml
container/src/: error.rs  lib.rs  service.rs  types.rs
core/: Cargo.toml  build.rs
core/src/: lib.rs
daemon/: Cargo.toml
daemon/src/: main.rs
daemon/src/services/: container.rs  image.rs  mod.rs  ross.rs  snapshotter.rs
docs/: krun.md
docs/architecture/: README.md  components.md  container-lifecycle.md  data-flow.md  image-pulling.md  networking.md  overview.md  snapshotter.md  storage.md
guest/: Cargo.toml
guest/src/: lib.rs  protocol.rs  tty.rs
image/: Cargo.toml
image/src/: error.rs  lib.rs  service.rs  types.rs
mount/: Cargo.toml
mount/src/: error.rs  lib.rs  overlay.rs
proto/: container.proto  image.proto  ross.proto  snapshotter.proto  store.proto
remote/: Cargo.toml
remote/src/: client.rs  error.rs  lib.rs  reference.rs  types.rs
shim/: Cargo.toml  build.rs
shim/src/: error.rs  guest_config.rs  lib.rs  libkrun_shim.rs  rootfs.rs  runc_shim.rs  shim.rs  tty_host.rs  tty_protocol.rs  types.rs
shim/src/libkrun/: container.rs  krun.rs  mod.rs  network.rs  rootfs.rs  shim.rs
shim/src/libkrun/net/: arp.rs  dhcp.rs  dns.rs  eth.rs  mod.rs  nat.rs  ring.rs  ring_spsc.rs  stack.rs
snapshotter/: Cargo.toml
snapshotter/src/: error.rs  lib.rs  overlay.rs  types.rs
store/: Cargo.toml  build.rs
store/src/: error.rs  lib.rs  service.rs  storage.rs
