[package]
name = "ross-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
prost-types = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
ross-core = { path = "../core" }
