[package]
name = "ross-container"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
libkrun = ["ross-shim/libkrun"]

[dependencies]
async-stream = "0.3"
futures = "0.3"
prost-types = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
ross-shim = { path = "../shim" }
ross-snapshotter = { path = "../snapshotter" }
ross-store = { path = "../store" }
