[package]
name = "ross-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-stream = "0.3"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
prost-types = "0.13"
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
ross-core = { path = "../core" }
ross-remote = { path = "../remote" }
ross-store = { path = "../store" }
