[package]
name = "ross-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
libkrun = ["ross-container/libkrun"]

[dependencies]
async-stream = "0.3"
clap = { version = "4", features = ["derive"] }
prost-types = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ross-container = { path = "../container" }
ross-core = { path = "../core" }
ross-image = { path = "../image" }
ross-snapshotter = { path = "../snapshotter" }
ross-store = { path = "../store" }
