[package]
name = "ross-guest"
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace]

[[bin]]
name = "ross-init"
path = "src/bin/ross_init.rs"

[dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["term", "socket", "process", "signal", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
