[package]
name = "ross-image"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-stream = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
ross-remote = { path = "../remote" }
ross-store = { path = "../store" }
