[package]
name = "ross-shim"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-stream = "0.3"
futures = "0.3"
oci-spec = "0.7"
ross-mount = { path = "../mount" }
runc = { version = "0.3", features = ["async"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full", "fs", "process"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
