[package]
name = "ross-snapshotter"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
flate2 = "1.0"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["full", "fs", "process"] }
tonic = "0.12"
tracing = "0.1"
ross-store = { path = "../store" }

[dev-dependencies]
tempfile = "3"
