[package]
name = "ross-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-stream = "0.3"
prost = "0.13"
prost-types = "0.13"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["full", "fs"] }
tokio-stream = "0.1"
tonic = "0.12"
tracing = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tonic-build = "0.12"
